[tool.poetry]
name = "vlab-bailer"
version = "0.1.0"
description = ""
authors = ["Nandan Rao <nandanmarkrao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.2"
clize = "^5.0.2"
tqdm = "^4.66.5"


[tool.poetry.group.dev.dependencies]
python-lsp-server = {extras = ["all"], version = "^1.12.0"}
future = "^1.0.0"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
pylsp-mypy = "^0.6.9"
python-lsp-black = "^2.0.0"
pyls-isort = "^0.2.2"
pylsp-rope = "^0.1.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vlab_bailer = 'vlab_bailer.main:run'
